Added tests for Graph, GraphManager, FileManager and simple algorithms, minor code improvements